--- a/action.yml
+++ b/action.yml
@@ -1,12 +1,16 @@
 name: 'Node CI'
 description: 'Standard CI for a Node project'
+inputs:
+  node-version:  
+    description: 'The version of node'
+    required: true
 runs:
   using: "composite"
   steps:
     - name: Setup node env 🏗
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: ${{ inputs.node-version }}
           cache: npm
           check-latest: true
 
