--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ runs:
     - name: Setup node env 🏗
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ inputs.node-version }}
+          node-version: 14
           cache: npm
           check-latest: true
 
