--- a/action.yml
+++ b/action.yml
@@ -9,11 +9,11 @@ runs:
   using: 'composite'
   steps:
     - name: Setup node env 🏗
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          cache: npm
-          check-latest: true
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ inputs.node-version }}
+        cache: npm
+        check-latest: true
 
     - name: Install dependencies 👨🏻‍💻
       run: npm ci --prefer-offline --no-audit
