--- a/action.yml
+++ b/action.yml
@@ -20,13 +20,13 @@ runs:
         check-latest: true
 
     - name: Install dependencies 👨🏻‍💻
-      shell: ${{ inputs.shell }
+      shell: ${{ inputs.shell }}
       run: npm ci --prefer-offline --no-audit
 
     - name: Run linter 👀
-      shell: ${{ inputs.shell }
+      shell: ${{ inputs.shell }}
       run: npm run lint
 
     - name: Run tests 🧪
-      shell: ${{ inputs.shell }
+      shell: ${{ inputs.shell }}
       run: npm run test
