--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
         check-latest: true
 
     - name: Install dependencies 👨🏻‍💻
-      shell: ${{ inputs.node-version }}
+      shell: ${{ inputs.shell }}
       run: npm ci --prefer-offline --no-audit
 
     - name: Run linter 👀
